# raptor-qa-project

./: .ignore  README.md  pyproject.toml
source_code/: extracted_texts.json  textbook_extraction.py
